# openfst

./: .cproject  .gitignore  .project  Makefile  Makefile.in  configure  configure.ac  openfst.patch  openfst_crypt.patch  out.txt
autom4te.cache/: output.0  traces.0  traces.1
m4/: ac_python_devel.m4
src/: Makefile  Makefile.in
src/extensions/: Makefile  Makefile.in
src/extensions/compact/: Makefile  Makefile.in
src/extensions/compress/: Makefile  Makefile.in
src/extensions/const/: Makefile  Makefile.in
src/extensions/far/: Makefile  Makefile.am  Makefile.in
src/extensions/linear/: Makefile  Makefile.in
src/extensions/lookahead/: Makefile  Makefile.in
src/extensions/mpdt/: Makefile  Makefile.in
src/extensions/ngram/: CMakeLists.txt  Makefile  Makefile.in
src/extensions/pdt/: Makefile  Makefile.in
src/extensions/python/: Makefile  Makefile.am  Makefile.in  fst.pxd  pywrapfst.pyx
src/extensions/special/: Makefile  Makefile.in
src/include/: Makefile  Makefile.am  Makefile.in
src/include/fst/: compact-fst.h  const-fst.h  edit-fst.h  encode.h  expanded-fst.h  flags.h  fst.h  generic-register.h  label-reachable.h  matcher-fst.h  mutable-fst.h  properties.h  shm.h  symbol-table.h  types.h  vector-fst.h
src/include/fst/extensions/ngram/: ngram-fst.h
src/lib/: Makefile  Makefile.am  Makefile.in  libfst.vcxproj  libfst.vcxproj.filters  mapped-file.cc  shm.cc  symbol-table.cc
src/script/: Makefile  Makefile.am  Makefile.in  fst-class.cc
src/test/: Makefile  Makefile.in  fst_test.cc  fst_test.h
